[omnibox-next] Fix pdf icon in dark mode
Add correct color for dark mode pdf icon. Also, remove the gray box
around the pdf icon.

Before: screen/HoCch7DAdNBjT5i
After: screen/3FCWH2k9kecAeQx

Bug: b:462135372
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7180581
Commit-Queue: Ananya Seelam <ananyaseelam@google.com>
Cr-Commit-Position: refs/heads/main@{#1548052}

--- a/chrome/browser/resources/omnibox_popup/aim_app.css
+++ b/chrome/browser/resources/omnibox_popup/aim_app.css
@@ -40,7 +40,7 @@ cr-composebox {
   --color-composebox-hover: unset; /* Lens only */
   --color-composebox-input-icon: var(--color-omnibox-results-icon);
   --color-composebox-lens-button: unset; /* Lens only */
-  --color-composebox-pdf-chip-icon: var(--color-omnibox-text-subtle);
+  --color-composebox-pdf-chip-icon: var(--color-omnibox-text-dimmed);
   --color-composebox-recent-tab-chip-outline: unset; /* Omnibox has no recent tab chip. */
   --color-composebox-scrim-background: unset; /* No scrim. */
   --color-composebox-submit-button-background: var(--color-omnibox-composebox-submit-button-background);
