--- a/ui/webui/resources/cr_components/composebox/file_thumbnail.css
+++ b/ui/webui/resources/cr_components/composebox/file_thumbnail.css
@@ -102,7 +102,6 @@
   border-radius: 4px;
   color: var(--color-composebox-pdf-chip-icon);
   height: 100%;
-  padding: 4px;
   width: 100%;
 }
 
